# signal-processing

./: .gitignore  CMakeLists.txt
assets/: test_image.ppm
src/: denoise.cpp  denoise.h  main.cpp  ppm.cpp  ppm.h  types.h
